Text alignment correction on service page

--- a/static/style.css
+++ b/static/style.css
@@ -104,7 +104,7 @@
     flex-wrap:wrap
 }
 .service-info{
-    text-align: justify;
+    text-align: left;
     font-size: 20px;
 }
 .service-btn{
